# interval-planner

./: .gitignore  Cargo.toml  LICENSE  README.md  sweetspot.fit
.github/workflows/: pr.yml  release.yml
src/: crc.rs  fit_writer.rs  lib.rs  main.rs  workout.rs
