[package]
name = "interval-planner"
version = "0.2.1"
edition = "2021"
authors = ["Alex Stout"]
description = "A Rust CLI and library for generating structured .plan workout files for cycling computers like Wahoo"
license = "MIT"
repository = "https://github.com/alex-stout/interval-planner"
homepage = "https://github.com/alex-stout/interval-planner"
readme = "README.md"
keywords = ["cycling", "workout", "fit", "cli", "wahoo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "fitgen"
path = "src/main.rs"
